--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -1,3 +1,12 @@
-html, body { height: 100%; margin: 0; padding: 0; }
-#map { height: 100%; }
+html, body {
+	@include linear-gradient(#990000, #000000);
+	font-family: $helvetica;
+	font-size: 30px;
+	height: 100%;
+	margin: 0;
+	padding: 0;
+}
 
+#map {
+	height: 100%;
+}
