adds search filtered listviewo

--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -1,5 +1,5 @@
 html, body {
-	@include linear-gradient(#990000, #000000);
+	@include linear-gradient(#D07373, #000000);
 	font-family: $helvetica;
 	font-size: 30px;
 	height: 100%;
