--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -1,24 +1,15 @@
-
-// #map {
-//     height: 400px;
-//   width: 100%;
-// }
-
-
 html, body {
-	// @include linear-gradient(#D07373, #000000);
-	// font-family: $helvetica;
-	font-family: $georgia;
+	font-family: $helvetica;
 	font-size: 20px;
 	height: 100%;
 	margin: 0;
 	padding: 0;
-
 }
 
 #map { height: 392px;
         width: 100%;
         margin-top: 26px;
+        @include outer-container;
       }
 
 section {@include outer-container;}
@@ -35,7 +26,7 @@ ul { @include span-columns(3);
 li { border:6px solid white;}
 
 
-.hero {
+.top {
   @include outer-container;
   $base-border-radius: 3px !default;
   $action-color: #477DCA !default;
@@ -51,13 +42,13 @@ li { border:6px solid white;}
   background-repeat: no-repeat;
   background-size: cover;
 
-  .hero-logo img {
+  .top-logo img {
     height: 6em;
     margin-bottom: 1em;
     margin-top: 1em;
   }
 
-  .hero-inner {
+  .top-inner {
     @include span-columns(9);
     @include outer-container;
     @include clearfix;
@@ -66,7 +57,7 @@ li { border:6px solid white;}
     text-align: center;
     margin-top: 60px;
 
-    .hero-copy {
+    .top-copy {
       text-align: center;
 
       h1 {
